<resources>
    <string name="app_name">7 Minutes Workout </string>
    <string name="start_image">Start Image</string>
    <string name="start">START</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="exercise_name">ExerciseName</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_done_the_workout">You have done the workout!</string>
    <string name="finish">FINISH</string>
    <string name="image">Done Image</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_long">This will stop you workout.You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="No">No</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="weight_in_pound">WEIGHT (in pound)</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="history">History</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="calender_image">Calender Image</string>
</resources>