<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_main_layout_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_MyImage"
        app:layout_constraintBottom_toTopOf="@id/flStartBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_main_page"
        android:contentDescription="@string/start_image"
        android:layout_margin="25dp"
         />

    <FrameLayout
        android:id="@+id/flStartBtn"
        app:layout_constraintTop_toBottomOf="@id/iv_MyImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/item_color_accent_border_ripple_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold"

            />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/flBMI"
        app:layout_constraintTop_toBottomOf="@id/flStartBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/flHistory"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="70dp"
        android:gravity="center"
        android:layout_height="70dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/item_circular_color_accent_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"

            />

    </FrameLayout>
    <TextView
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/flBMI"
        app:layout_constraintEnd_toEndOf="@id/flBMI"
        app:layout_constraintStart_toStartOf="@id/flBMI"

        />
    <FrameLayout
        android:id="@+id/flHistory"
        app:layout_constraintTop_toBottomOf="@id/flStartBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/flBMI"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/item_circular_color_accent_bg">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_calender"
            android:layout_gravity="center"
            android:contentDescription="@string/calender_image"
            />

    </FrameLayout>
    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/flHistory"
        app:layout_constraintEnd_toEndOf="@id/flHistory"
        app:layout_constraintStart_toStartOf="@id/flHistory"

        />


</androidx.constraintlayout.widget.ConstraintLayout>